fix(obseratory): input placeholder cut off
Use text-overflow: ellipsis

This only works in FF. Investigation ongoing.

--- a/client/src/observatory/landing.scss
+++ b/client/src/observatory/landing.scss
@@ -79,6 +79,11 @@
         flex-grow: 1;
         padding: 0 0.75rem;
         width: 100%;
+
+        &::placeholder {
+          overflow-x: hidden;
+          text-overflow: ellipsis;
+        }
       }
 
       button {
